--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -357,7 +357,7 @@ a.nav-link:hover {
 }
 
 .invalid-custom {
-    border-color: #dc3545;
+    border-color: #dc3545 !important;
 }
 
 .bg-card-home {
