--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -232,10 +232,10 @@ a.nav-link:hover {
 
 .btn-conoce-mas {
     padding: 0.8rem 3.8rem;
-    font-weight: 600;
     background: #5C8A99;
-    color: #fff;
-    text-decoration: none;
+    color: #FFFF;
+    font-size: 18px;
+    font-family: 'Myriad Pro_Semibold';
 }
 
 .btn-conoce-mas:hover {
@@ -400,23 +400,11 @@ a.nav-link:hover {
 }
 
 .btn-enviarUnMensaje {
-    display: inline-block;
-    font-weight: 400;
-    color: #231F20;
-    text-align: center;
-    vertical-align: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: white;
-    border: 1px solid transparent;
-    padding: .375rem 1.5rem;
-    font-size: 1.1rem;
-    line-height: 2;
-    transition: color .15s;
-    text-size-adjust: inherit;
-    font-family: Myriad Pro_Regular;
+    color: #231f20;
+    background-color: #FFFFFF;
+    padding: 0.8rem 1.9rem;
+    font-size: 18px;
+    font-family: 'Myriad Pro_Semibold';
 }
 
 .btn-enviarUnMensaje:hover {
@@ -461,7 +449,7 @@ a.nav-link:hover {
 .btn-inscribirse {
     padding: 1rem 3rem;
     font-weight: 700;
-    background: #5C8A99;
+    background: #5c8a99;
     color: #fff;
     text-decoration: none;
 }
@@ -610,20 +598,12 @@ textarea {
 }
 
 .btn-modal {
-    display: inline-block;
-    padding: 0.8rem 3.8rem;
-    font-weight: 700;
-    text-align: center;
-    vertical-align: middle;
-    user-select: none;
+    padding: .8rem 3.8rem;
     border: 1px solid transparent;
-    font-size: 1rem;
-    line-height: 1.5;
-    transition: color .15s;
-    text-size-adjust: inherit;
     color: #fff;
     background: #5C8A99;
-    text-decoration: none;
+    font-size: 18px;
+    font-family: 'Myriad Pro_Semibold';
 }
 
 .btn-modal:hover {
@@ -797,36 +777,27 @@ textarea {
 }
 
 .btn-conoce-mas-educacion {
-    padding: 0.8rem 3rem;
-    font-weight: 400;
-    background: #669999;
+    padding: .8rem 3.8rem;
+    border: 1px solid transparent;
     color: #fff;
-    text-decoration: none;
+    background: #5C8A99;
+    font-size: 18px;
+    font-family: 'Myriad Pro_Semibold';
 }
 
 .btn-conoce-mas-educacion:hover {
-    padding: 0.8rem 3rem;
     text-decoration: none;
     color: #ffffff;
-    background: #5C8A99;
-    font-weight: 400;
+    background: #547E8C;
 }
 
 .btn-form {
-    display: inline-block;
-    padding: 0.5rem 2rem;
-    font-weight: 700;
-    text-align: center;
-    vertical-align: middle;
-    user-select: none;
+    padding: .6rem 3.9rem;
     border: 1px solid transparent;
-    font-size: 1rem;
-    line-height: 1.5;
-    transition: color .15s;
-    text-size-adjust: inherit;
     color: #fff;
     background: #5C8A99;
-    text-decoration: none;
+    font-size: 18px;
+    font-family: 'Myriad Pro_Semibold';
 }
 
 .btn-form:hover {
