creacion de hover al boton blanco en el home

--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -408,8 +408,9 @@ a.nav-link:hover {
 }
 
 .btn-enviarUnMensaje:hover {
+    background-color:  #7EA4B1;
     text-decoration: none;
-    color: #231F20;
+    color: #fff;
 }
 
 .container-redes-sociales {
