se agrego tamaños para botones y medias y modificacion al footer para mover a la derecha los texto en el lado izquierdo

--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -387,7 +387,7 @@ a.nav-link:hover {
         font-size: 18px;
         font-family: 'Myriad Pro_Semibold';
     }
-    .btn-conoce-mas:hover {
+    .btn-conoce-mas-g:hover {
         text-decoration: none;
         color: #ffffff;
         background: #547E8C;
@@ -994,8 +994,20 @@ textarea {
     max-width: 900px;
 }
 
+.p1 {
+    font-family: 'Myriad Pro_Regular';
+    font-size: 1rem;
+    line-height: 24px;
+}
+
+.p2 {
+    font-family: 'Myriad Pro_Semibold';
+    font-size: 1rem;
+    line-height: 24px;
+}
+
 .p3 {
-    font-family: Myriad Pro_Regular;
+    font-family: 'Myriad Pro_Regular';
     font-size: 1rem;
     line-height: 44px;
 }
@@ -1111,4 +1123,11 @@ textarea {
     color: #FFFF;
     font-size: 18px;
     font-family: 'Myriad Pro_Semibold';
+}
+
+@media screen and (max-width: 720px) {
+    .nav-footer {
+        flex-direction: column;
+        align-items: center;
+    }
 }
